fixed spacing on mobile portion

--- a/Exercise - Page Layout/starter_files/style.css
+++ b/Exercise - Page Layout/starter_files/style.css
@@ -55,6 +55,10 @@ header {
     border-bottom: 2px solid #ddddff;
 }
 
+#logo {
+    text-align: center;
+}
+
 #site_container {
     padding: 20px;
     max-width: 1100px;
@@ -78,6 +82,26 @@ header {
 
 #main_nav a:hover {
     background: #ddddff;
+}
+
+#main_content {
+    background-color: #ddffff;
+    padding: 1rem;
+}
+
+#sidebar_content > div {
+    background-color: #ffffdd;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 1rem;
+    margin: 1rem 0rem 1rem 0rem;
+}
+
+#site_footer {
+    text-align: center;
+    background-color: #ffbb68;
+    padding: 1.1rem 1rem 1.1rem 1rem;
 }
 
 
